@@ -1,0 +1,5 @@
+package it.uniroma3.siw.my_restaurant.controller;
+
+public class RestaurantController {
+    
+}
