@@ -1,0 +1,8 @@
+package it.uniroma3.siw.my_restaurant.controller;
+
+import org.springframework.stereotype.Controller;
+
+@Controller
+public class TableController {
+    
+}
