@@ -1,0 +1,55 @@
+package it.uniroma3.siw.my_restaurant.model;
+
+import jakarta.persistence.CascadeType;
+import jakarta.persistence.Entity;
+import jakarta.persistence.GeneratedValue;
+import jakarta.persistence.GenerationType;
+import jakarta.persistence.Id;
+import jakarta.persistence.OneToOne;
+import jakarta.validation.constraints.NotBlank;
+
+@Entity
+public class Menu {
+	
+	@Id
+	@GeneratedValue(strategy = GenerationType.AUTO)
+	private Long id;
+	
+	@NotBlank
+	private String name;
+	
+	@NotBlank
+	private String description;
+	
+	@OneToOne(cascade = CascadeType.ALL)
+	private Table table;
+
+	public Long getId() {
+		return this.id;
+	}
+	public void setId(Long id) {
+		this.id = id;
+	}
+
+	public String getName() {
+		return this.name;
+	}
+	public void setName(String name) {
+		this.name = name;
+	}
+
+	public String getDescription() {
+		return this.description;
+	}
+	public void setDescription(String description) {
+		this.description = description;
+	}
+
+	public Table getTable() {
+		return this.table;
+	}
+	public void setTable(Table table) {
+		this.table = table;
+	}
+
+}
