@@ -1,0 +1,9 @@
+package it.uniroma3.siw.my_restaurant.repository;
+
+import org.springframework.data.repository.CrudRepository;
+import it.uniroma3.siw.my_restaurant.model.Menu;
+
+public interface MenuRepository extends CrudRepository<Menu, Long>{
+
+}
+
