@@ -1,0 +1,8 @@
+package it.uniroma3.siw.my_restaurant.service;
+
+import org.springframework.stereotype.Service;
+
+@Service
+public class RestaurantService {
+    
+}
